# HelpDesk-Bot

./: .gitignore  README.md  requirements.txt
app/: livekit_agent.py  prompt.py
backend/: pyproject.toml
backend/app/: api_server.py  config.py  crud.py  db.py  livekit_agent.py  main.py  models.py  prompt.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
